# Cite-GPT

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/zotero_voice_assistant/: __init__.py  audio.py  cli.py  config.py  controller.py  gui.py  main.py  openai_client.py  zotero_client.py
